--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "description": "UION (User Interface Object Notation) is a JSON user interface builder based on UIkit.",
   "main": "",
   "private": false,
-  "dependencies": {},
+  "dependencies": {
+    "gulp-dot-template": "^0.2.1"
+  },
   "devDependencies": {
-    "jasmine-core": "^2.2.0",
-    "karma": "^0.12.31",
-    "karma-coverage": "^0.3.1",
-    "karma-jasmine": "^0.3.5",
-    "karma-phantomjs-launcher": "^0.1.4",
+    "jasmine-core": "^2.8.0",
+    "karma": "^1.7.1",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-phantomjs-launcher": "^1.0.4",
     "gulp": "^3.9",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-less": "^3.0.3",
-    "gulp-minify-css": "^1.2.1",
-    "gulp-uglify": "^1.4.1"
+    "gulp-clean-css": "^3.8.0",
+    "gulp-uglify": "^2.1.2"
   },
   "scripts": {
     "test": "karma start karma.conf.js --single-run",
