--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "UION",
-  "version": "0.10.0",
+  "name": "uion",
+  "version": "0.11.0",
   "homepage": "https://github.com/zebzhao/UION",
   "dependencies": {
     "uikit": "uikit/uikit#^2.27.x",
