--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "uion",
+  "name": "lumi",
   "version": "0.11.0",
   "homepage": "https://github.com/zebzhao/UION",
   "dependencies": {
@@ -12,7 +12,7 @@
     "gulpfile.js",
     "karma.conf.js",
     "package.json",
-    "uion.spec.js",
+    "lumi.spec.js",
     ".gitignore",
     ".travis.yml"
   ]
