--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "lumi",
   "version": "0.11.0",
-  "homepage": "https://github.com/zebzhao/UION",
+  "homepage": "https://github.com/zebzhao/lumi",
   "dependencies": {
     "uikit": "uikit/uikit#^2.27.x",
     "jquery": "^2.x.x"
